[package]
name = "aperture"
version = "0.1.0"
edition = "2018"

[dependencies]
aperture-common = { path = "../aperture-common" }
aperture-mesh = { path = "../aperture-mesh" }

cgmath = "0.18"
tokio = { version = "1.9", features = [ "full" ] }
vulkano = "0.24"
vulkano-shaders = "0.24"
vulkano-win = "0.24"
winit = "0.25"
